--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Onde está a agatha nunes?</title>
+    <title>Onde está a Agatha Nunes?</title>
     <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <!-- Arquivo CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Arquivo CSS -->
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 
@@ -16,28 +17,29 @@
         <h1>Aonde está a Agatha Nunes?</h1>
         <p>Tente adivinhar aonde está a diva.</p>
   
-      <div id="linha1" class="row justify-content-center">
-        <div id="0" class="inicial" onclick="verifica(this)">1</div>
-        <div id="1" class="inicial" onclick="verifica(this)">2</div>
-        <div id="2" class="inicial" onclick="verifica(this)">3</div>
-        <div id="3" class="inicial" onclick="verifica(this)">4</div>
-        <div id="4" class="inicial" onclick="verifica(this)">5</div>
-        
-      
+        <div id="linha1" class="row justify-content-center">
+            <div id="0" class="inicial" onclick="verifica(this)">1</div>
+            <div id="1" class="inicial" onclick="verifica(this)">2</div>
+            <div id="2" class="inicial" onclick="verifica(this)">3</div>
+            <div id="3" class="inicial" onclick="verifica(this)">4</div>
+            <div id="4" class="inicial" onclick="verifica(this)">5</div>
+        </div>
 
-      </div>
-      <div class="row justify-content-center" id="div1">
-        <p id="resposta"></p>
-        <button id="joganovamente">Jogar novamente</button>
-        <button id="reiniciar" class="invisivel">Reiniciar</button>
-      </div>
+        <div class="row justify-content-center" id="div1">
+            <p id="resposta"></p>
+            <button id="joganovamente">Jogar novamente</button>
+            <button id="reiniciar" class="invisivel">Reiniciar</button>
+        </div>
     </div>
+
+    <!-- Áudio de acerto e erro -->
     <audio id="audioAcerto" src="acerto.mp3" preload="auto"></audio>
     <audio id="audioErro" src="erro.mp3" preload="auto"></audio>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script> 
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script> 
     <script src="./js/jogo.js"></script>
-  </body>
+</body>
+
 </html>
